# Microrest

./: README.md
app/: build.gradle.kts
backend/menu-service/: .env  DockerFile  Dockerfile  README.md  alembic.ini  docker-compose.yml  dockerfile  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/menu-service/app/: dependencies.py
backend/menu-service/app/api/v1/: menu.py
backend/menu-service/app/core/: db.py
backend/menu-service/migrations/: env.py
backend/menu-service/migrations/versions/: 34cdd380fc81_create_menu_items_table.py  575528e0e509_create_all_menu_tables.py
backend/menu-service/prisma/: schema.prisma
backend/menu-service/prisma/migrations/20251112111630_init/: migration.sql
backend/menu-service/src/: main.py  server.ts
backend/menu-service/src/api/v1/: routes.py
backend/menu-service/src/api/v1/categories/: routes.py
backend/menu-service/src/api/v1/menus/: routes.py
backend/menu-service/src/core/: config.py
backend/menu-service/src/db/: model.py  session.py
backend/menu-service/src/event/: event.register.ts
backend/menu-service/src/event/consumer/: categoryConsumer.ts  consumer.ts  menu-items.consumer.ts
backend/menu-service/src/event/consumer/handlers/: categoryHandlers.ts  index.handler.ts  menu-items.handler.ts
backend/menu-service/src/event/kafka/: kafka.client.ts  kafka.producer.ts  schemas.registry.ts
backend/menu-service/src/schemas/: menu.py
backend/menu-service/src/services/: menu_service.py
backend/menu-service/src/utils/: interface.ts
docs/: architecture.md
gateway/: nginx.conf
(+132 files in other folders)
